--- a/template/Gemfile
+++ b/template/Gemfile
@@ -9,4 +9,7 @@ gem 'wdm', '~> 0.1.0', platforms: [:mswin, :mingw]
 gem 'tzinfo-data', platforms: [:mswin, :mingw, :jruby]
 
 # Include the tech docs gem
-gem 'govuk_tech_docs'
+#gem 'govuk_tech_docs'
+
+# Use local version of govuk_tech_docs
+gem 'govuk_tech_docs', path: '../tech-docs-gem'
