--- a/template/Gemfile
+++ b/template/Gemfile
@@ -8,8 +8,8 @@ gem 'wdm', '~> 0.1.0', platforms: [:mswin, :mingw]
 # Windows does not come with time zone data
 gem 'tzinfo-data', platforms: [:mswin, :mingw, :jruby]
 
-# Include the tech docs gem
+# Include the tech docs gem (this needs to be changed to the DSS version)
 #gem 'govuk_tech_docs'
 
-# Use local version of govuk_tech_docs
+# Use local version of govuk_tech_docs as a temporary measure
 gem 'govuk_tech_docs', path: '../tech-docs-gem'
